# hoster_benchmark

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: fake_ranges.csv  feeds.yaml  feeds.yaml.bak  hosters.txt  hosters.txt.bak  pipeline.yaml  pipeline.yaml.bak
src/hosterbenchmark/: cli.py  pipeline.py
src/hosterbenchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hosterbenchmark/counts/: capacity.py  unique_slds.py
src/hosterbenchmark/domains/: enrich.py  extract.py
src/hosterbenchmark/feeds/: __init__.py  parsers.py  runner.py  store.py
src/hosterbenchmark/merge/: join_capacity.py
